--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <!-- <p class="text-muted mb-0">We offer a diverse range of digital & phygital fashion NFTs for your generated pattern design to be applied to. -->
+                                        <p class="text-muted mb-0">We offer a diverse range of digital & phygital fashion NFTs for your generated pattern design to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -246,7 +246,7 @@
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Design preference selector
                                         </h3>
-                                        <!-- <p class="text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible. -->
+                                        <p class="text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible.
                                         </p>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
-                                        <!-- <p class="text-muted mb-0">A 3D product mockup generator that displays the generated design on your chosen product in real-time. -->
+                                        <p class="text-muted mb-0">A 3D product mockup generator that displays the generated design on your chosen product in real-time.
                                         </p>
                                     </div>
                                 </div>
@@ -307,7 +307,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
                         <h2 class="display-4 lh-1 mb-4"> 1. You Select A Product</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
@@ -320,7 +320,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
                         <h2 class="display-4 lh-1 mb-4">2. You Select Your Design Preferences</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/UI.png" alt="..." /></div>
@@ -333,7 +333,7 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-5">
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
-                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/productprint.png" alt="a t-shirt with a hawaian print" /></div>
