--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 
         <title>XARIIA</title>
         <meta charset="UTF-8">
-        <meta name="description" content="XARIIA is the online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.d">
+        <meta name="description" content="XARIIA is the online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.">
         <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
         <meta name="author" content="Shirak Kevorkian">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:title" content="XARIIA" />
         <meta property="og:url" content="https://xariia.com/" />
-        <meta property="og:description" content="XARIIA is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
+        <meta property="og:description" content="XARIIA is the online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.">
+        <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
         <meta property="og:image" content="XARIIAfb.png"><meta property="og:image:type" content="image/png" />
         <meta property="og:image:alt" content="XARIIA Logo" />
       
@@ -137,7 +138,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the site.</p>
+                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.</p>
                             <p class="lead fw-normal text-muted mb-5">             
                                 Our mission is to simplify custom fashion, make it accessible and affordable to everyone around the world while keeping the process of obtaining a unique design simple and user-friendly, connect the physical and virtual worlds with wearables, reduce waste by doing production on demand, and promote 96 percent more sustainable digital clothing.
                             </p>
@@ -244,7 +245,7 @@
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt">Design preference selector
+                                        <h3 class="font-alt">Design Preference Selector
                                         </h3>
                                         <p class="text-muted mb-0">A user interface that makes collecting your design preferences as simple as possible.
                                         </p>
@@ -257,7 +258,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Creative AI </h3>
-                                        <p class="text-muted mb-0">Based on your design preferences, the AI instantly generates unique and distinct pattern designs for store-sold products.
+                                        <p class="text-muted mb-0">Based on your design preferences, the AI instantly generates unique and distinct pattern design for your chosen product.
                                         </p>
                                     </div>
                                 </div>
