--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
                             <h1 class="display-1 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
                             <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.</p>
                             <p class="lead fw-normal text-muted mb-5">             
-                                Our mission is to simplify custom fashion, make it accessible and affordable to everyone around the world while keeping the process of obtaining a unique design simple and user-friendly, connect the physical and virtual worlds with wearables, reduce waste by doing production on demand, and promote 96 percent more sustainable digital clothing.
+                                Our mission is to revolutionize custom fashion.<br>
+                                We accomplish this by:<br>
+                                Using AI to automate the print design process. <br>
+                                Making high-fashion accessible and affordable to anyone. <br>
+                                Selling a unique design in one click of a button. <br>
+                                Being a pioneer in the digital & physical fashion  space.<br>
+                                Selling digital clothing that’s 96% more sustainable, With on-demand production of our physical cloths.                                
                             </p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <div class="newsletter">
@@ -217,7 +223,8 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-8">
-                        <div class="h2 fs-1  mb-4">"AI Designed Bespoke Fashion For Both The Physical World And The Metaverse!"</div>
+                        <div class="h2 fs-1  mb-4">"Bespoke Fashion Designed  By AI  For Both The Physical World And The Metaverse!"
+                        </div>
                         <img src="assets/xariia.png" alt="..." style="height: 3rem" />
                     </div>
                 </div>
@@ -237,7 +244,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="text-muted mb-0">We offer a diverse range of digital & phygital fashion NFTs for your generated pattern design to be applied to.
+                                        <p class="text-muted mb-0">We offer a diverse range of digital & phygital NFT fashion  for your generated pattern design to be applied to.
                                         </p>
                                     </div>
                                 </div>
