--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
                             <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.</p>
-                            <p class="lead fw-normal text-muted mb-5">             
+                            <!-- <p class="lead fw-normal text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
-                                Using AI to automate the print design process. <br>
-                                Making high-fashion accessible and affordable to anyone. <br>
-                                Selling a unique design in one click of a button. <br>
-                                Being a pioneer in the digital & physical fashion  space.<br>
-                                Selling digital clothing that’s 96% more sustainable, With on-demand production of our physical cloths.                                
-                            </p>
+                                - Using AI to automate the print design process. <br>
+                                - Making high-fashion accessible and affordable to anyone. <br>
+                                - Selling a unique design in one click of a button. <br>
+                                - Being a pioneer in the digital & physical fashion  space.<br>
+                                - Selling digital clothing that’s 96% more sustainable, With on-demand production of our physical cloths.                                
+                            </p> -->
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <div class="newsletter">
                                     <!-- Begin Mailchimp Signup Form -->
@@ -218,6 +218,29 @@
                 </div>
             </div>
         </header>
+        <!-- <section class="bg-light">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="col-sm-8 col-md-4">
+                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/view.png" alt="a t-shirt with a hawaian print" /></div>
+                    </div>
+                    <div class="col-12 col-lg-8">
+                        <h2 class="display-4 lh-1 mb-4">Our mission is to revolutionize custom fashion.
+                        </h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                            <p class="lead fw-normal text-muted mb-5">             
+                                We accomplish this by:<br>
+                                - Using AI to automate the print design process. <br>
+                                - Making high-fashion accessible and affordable to anyone. <br>
+                                - Selling a unique design in one click of a button. <br>
+                                - Being a pioneer in the digital & physical fashion  space.<br>
+                                - Selling digital clothing that’s 96% more sustainable, With on-demand production of our physical cloths.                                
+                            </p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section> -->
         <!-- Quote/testimonial aside-->
         <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
@@ -225,7 +248,7 @@
                     <div class="col-xl-8">
                         <div class="h2 fs-1  mb-4">"Bespoke Fashion Designed  By AI  For Both The Physical World And The Metaverse!"
                         </div>
-                        <img src="assets/xariia.png" alt="..." style="height: 3rem" />
+                        <img src="assets/xariia.png" alt="xariia logo" style="height: 3rem" />
                     </div>
                 </div>
             </div>
@@ -244,7 +267,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="text-muted mb-0">We offer a diverse range of digital & phygital NFT fashion  for your generated pattern design to be applied to.
+                                        <p class="text-muted mb-0">We offer a diverse range of Digital & Phygital NFT fashion products for the generated pattern designs to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -265,8 +288,8 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Creative AI </h3>
-                                        <p class="text-muted mb-0">Based on your design preferences, the AI instantly generates unique and distinct pattern design for your chosen product.
-                                        </p>
+                                        <p class="text-muted mb-0">
+                                            Based on your design preferences, the AI instantly generates a unique and distinct pattern design for you.                                        </p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -274,7 +297,8 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
-                                        <p class="text-muted mb-0">A 3D product mockup generator that displays the generated design on your chosen product in real-time.
+                                        <p class="text-muted mb-0">
+                                            A 3D product mockup generator that displays the generated pattern print design on the your chosen product in real-time.
                                         </p>
                                     </div>
                                 </div>
