--- a/index.html
+++ b/index.html
@@ -339,8 +339,10 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4"> 1. You Select A Product</h2>
-                        <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
-                    </div>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                            Our platform will offer you a diverse range of Digital & Phygital (clothes that are digital and physical where both are connected via a digital ID, enabling you to wear the same in both the physical and digital world) clothes, for the custom design to go on.
+                        </p>                   
+                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
                     </div>
@@ -352,7 +354,9 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">2. You Select Your Design Preferences</h2>
-                        <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                            After you've chosen a product, the platform will take you to a page where you can personalize your design by selecting preferences from the user interface. According to your preferences, our AI will create a design for you.
+                        </p>
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/UI.png" alt="..." /></div>
@@ -365,7 +369,10 @@
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
-                        <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> -->
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                            The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.
+The generated design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.
+                        </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/productprint.png" alt="a t-shirt with a hawaian print" /></div>
