--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4"> 1. You Select A Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            Our platform will offer you a diverse range of Digital & Phygital (clothes that are digital and physical where both are connected via a digital ID, enabling you to wear the same in both the physical and digital world) clothes, for the custom design to go on.
+                            Our platform will offer you a diverse range of digital & Phygital (clothes that are digital and physical where both are connected via a digital ID, enabling you to wear the same in both the physical and digital world) clothes, for the custom design to go on.
                         </p>                   
                      </div>
                     <div class="col-sm-8 col-md-6">
@@ -370,7 +370,7 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.
+                            The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.<br>
 The generated design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.
                         </p>                    
                     </div>
