--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.<br>
-The generated design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.
-                        </p>                    
+                            The generated design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.<br>
+                            The digital clothing can be worn in the Metaverse, in places like Horizon Worlds by Meta, Decentraland, and The Sandbox, as well as in real-time using augmented reality.                        </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/productprint.png" alt="a t-shirt with a hawaian print" /></div>
