--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
-                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the website.</p>
+                            <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique pattern designs for clothing sold on the website.</p>
                             <!-- <p class="lead fw-normal text-muted mb-5">             
                                 Our mission is to revolutionize custom fashion.<br>
                                 We accomplish this by:<br>
@@ -344,7 +344,7 @@
                         </p>                   
                      </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
+                        <div class="px-5 px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
                     </div>
                 </div>
             </div>
@@ -359,7 +359,7 @@
                         </p>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/UI.png" alt="..." /></div>
+                        <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/UInoprint.png" alt="..." /></div>
                     </div>
                 </div>
             </div>
@@ -375,7 +375,7 @@
                             The digital clothing can be worn in the Metaverse, in places like Horizon Worlds by Meta, Decentraland, and The Sandbox, as well as in real-time using augmented reality.                        </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/productprint.png" alt="a t-shirt with a hawaian print" /></div>
+                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
             </div>
