--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-6 mb-lg-0 text-center text-lg-start">
-                            <h4 class="font-alt">Subscribe</h4>
+                            <h4 class="font-alt">Join Us</h4>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <div class="newsletter">
                                     <!-- Begin Mailchimp Signup Form -->
