--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
                             <h4 class="font-alt">Follow Us</h4>
                             <ul class="list-inline mb-0">
                                 <li class="list-inline-item me-4">
-                                    <a href="https://www.facebook.com/XARIIA"><i class="bi-facebook fs-3"></i></a>
+                                    <a href="https://www.facebook.com/XARIIA" target="_blank"><i class="bi-facebook fs-3"></i></a>
                                 </li>
                                 <li class="list-inline-item me-4">
-                                    <a href="https://www.linkedin.com/company/xariia/?viewAsMember=true"><i class="bi-linkedin fs-3"></i></a>
+                                    <a href="https://www.linkedin.com/company/xariia/?viewAsMember=true" target="_blank"><i class="bi-linkedin fs-3"></i></a>
                                 </li>
                                 <!-- <li class="list-inline-item">
                                     <a href="#!"><i class="bi-instagram fs-3"></i></a>
