--- a/index.html
+++ b/index.html
@@ -371,8 +371,10 @@
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.<br>
-                            The generated design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.<br>
-                            The digital clothing can be worn in the Metaverse, in places like Horizon Worlds by Meta, Decentraland, and The Sandbox, as well as in real-time using augmented reality.                        </p>                    
+                            The design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.<br>
+                            Your avatar can wear the digital clothing in the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, and IRL using augmented reality.<br>    
+                            You can wear the physical IRL becauseas we will manufacture and ship your chosen product in your size.                        
+                        </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a t-shirt with a hawaian print" /></div>
@@ -380,6 +382,21 @@
                 </div>
             </div>
         </section>
+        <!-- <section class="bg-light">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="col-12 col-lg-6">
+                        <h2 class="display-4 lh-1 mb-4">4. Purchase & Use</h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+
+                        </p>                    
+                    </div>
+                    <div class="col-sm-8 col-md-6">
+                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a t-shirt with a hawaian print" /></div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
         <!-- Call to action section-->
         <!-- <section class="cta">
             <div class="cta-content">
