--- a/index.html
+++ b/index.html
@@ -340,8 +340,7 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4"> 1. You Select A Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            Our platform will offer you a diverse range of digital & Phygital (clothes that are digital and physical where both are connected via a digital ID, enabling you to wear the same in both the physical and digital world) clothes, for the custom design to go on.
-                        </p>                   
+                            Our platform will provide you with a wide variety of digital and phygital cloths (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
                      </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
@@ -355,8 +354,7 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">2. You Select Your Design Preferences</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            After you've chosen a product, the platform will take you to a page where you can personalize your design by selecting preferences from the user interface. According to your preferences, our AI will create a design for you.
-                        </p>
+                            Following your selection of a product, the platform will direct you to a page where you can customize your design by selecting preferences from the user interface. Our AI will create a design for you based on your preferences.                        </p>
                     </div>
                     <div class="col-sm-8 col-md-6">
                         <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/UInoprint.png" alt="..." /></div>
@@ -372,8 +370,8 @@
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.<br>
                             The design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.<br>
-                            Your avatar can wear the digital clothing in the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, and IRL using augmented reality.<br>    
-                            You can wear the physical IRL becauseas we will manufacture and ship your chosen product in your size.                        
+                            Your avatar can wear the digital clothing in the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, and IRL using augmented reality & social media lens.<br>    
+                            You can wear the physical clothing IRL as we will manufacture and ship your chosen product in your size.                        
                         </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
