--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <div class="container px-5">
                 <div class="text-white-50 small">
                     <div class="mb-2">&copy; XARIIA 2022 All Rights Reserved.</div>
-                    <a href="#!">Privacy Policy</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                     <!-- <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a> -->
                     <!-- <span class="mx-1">&middot;</span> -->
