--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -122,7 +122,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5 logomid">
-                <a href="#page-top" class="navbar-brand fw-bold"><img src="assets/xariia.png" alt="XARIIA logo" class="img-fluid"></a>
+                <a href="index.html" class="navbar-brand fw-bold"><img src="assets/xariia.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                     <span class="d-flex align-items-center">
                         <span class="small">Subscribe</span>
@@ -135,7 +135,7 @@
         <section id="" class="privacy-policy">
           <div class="container">
             <div class="row">
-              <div class="col-lg-12  justify-content-center">
+              <div class="col-lg-12  justify-content-center" style="margin-top: 3rem">
               <h1>Privacy Policy</h1>
               <p>Last updated: March 29, 2021</p>
               <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
