--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="bg-light">
+        <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
@@ -390,11 +390,11 @@
                         </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a t-shirt with a hawaian print" /></div>
+                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/usecases.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- Call to action section-->
         <!-- <section class="cta">
             <div class="cta-content">
