--- a/index.html
+++ b/index.html
@@ -368,10 +368,8 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            The AI-generated design will be applied to the product, allowing you to view it in 3D and augmented reality before you buy it.<br>
-                            The design will be automatically pushed to the blockchain and stored there, allowing you to use your unique design on multiple products in the future.<br>
-                            Your avatar can wear the digital clothing in the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox, and IRL using augmented reality & social media lens.<br>    
-                            You can wear the physical clothing IRL as we will manufacture and ship your chosen product in your size.                        
+                            The product will have the AI-generated design applied to it so that you can view it in 3D and augmented reality before you buy it.<br>
+The design will be instantly minted to the blockchain and saved there, enabling you to use your distinctive design on numerous products in the future.
                         </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
@@ -386,7 +384,10 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">4. Purchase & Use</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-
+                            The purchased product can be used in the following three ways:<br>
+                            - Physically, in real life, as we will produce the product as needed based on your size and generated design.<br>
+                            - Digitally in real life, wearing the product digitally using augmented reality apps and social media filters like Snapchat Lens.<br>
+                            - In the Metaverse, virtual worlds like Horizon Worlds by Meta, Decentraland, and The Sandbox allow you to customize your avatar.
                         </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
