--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@ The design will be instantly minted to the blockchain and saved there, enabling
                         <h2 class="display-4 lh-1 mb-4">4. Purchase & Use</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             The purchased product can be used in the following three ways:<br>
-                            - Physically, in real life, as we will produce the product as needed based on your size and generated design.<br>
-                            - Digitally in real life, wearing the product digitally using augmented reality apps and social media filters like Snapchat Lens.<br>
-                            - In the Metaverse, virtual worlds like Horizon Worlds by Meta, Decentraland, and The Sandbox allow you to customize your avatar.
+                            - Physically worn in real life as we will produce the product as needed based on your size and generated design.<br>
+                            - Digitally worn in real life by using social media filters like Snapchat Lens and augmented reality applications.<br>
+                            - In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox. where you can use digital products to dress your avatar.
                         </p>                    
                     </div>
                     <div class="col-sm-8 col-md-6">
