--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                         <div id="mc_embed_signup">
                                           <form action="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                             <div id="mc_embed_signup_scroll">
-                                              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
+                                              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your Email Address" required>
                                                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_515fdf03c460cd13fff01535c_233939e4f6" tabindex="-1" value=""></div>
                                                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
@@ -170,19 +170,19 @@
                     <div class="col-lg-6 slideshow-container">
                         <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img src="assets/productprint.png" style="width:100%">
+                            <img src="assets/productprint.png" style="width:90%">
                             <div class="text"></div>
                           </div>
                           
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img src="assets/productprint1.png" style="width:100%">
+                            <img src="assets/productprint1.png" style="width:90%">
                             <div class="text"></div>
                           </div>
                           
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
-                            <img src="assets/productprint2.png" style="width:100%">
+                            <img src="assets/productprint2.png" style="width:90%">
                             <div class="text"></div>
                           </div>
 
@@ -343,7 +343,7 @@
                             Our platform will provide you with a wide variety of digital and phygital cloths (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
                      </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
+                        <div class="px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
                     </div>
                 </div>
             </div>
@@ -356,8 +356,8 @@
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             Following your selection of a product, the platform will direct you to a page where you can customize your design by selecting preferences from the user interface. Our AI will create a design for you based on your preferences.                        </p>
                     </div>
-                    <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/UInoprint.png" alt="..." /></div>
+                    <div class="col-sm-10 col-md-6">
+                        <div class="px-sm-0 imgsteps"><img class="img-fluid" src="assets/UInoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
                     </div>
                 </div>
             </div>
@@ -369,11 +369,11 @@
                         <h2 class="display-4 lh-1 mb-4">3. You See A Mockup Of the Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             The product will have the AI-generated design applied to it so that you can view it in 3D and augmented reality before you buy it.<br>
-The design will be instantly minted to the blockchain and saved there, enabling you to use your distinctive design on numerous products in the future.
+                            The design will be instantly minted to the blockchain and saved there, enabling you to use your distinctive design on numerous products in the future.
                         </p>                    
                     </div>
-                    <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a t-shirt with a hawaian print" /></div>
+                    <div class="col-sm-10 col-md-6">
+                        <div class="px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a  picture of a shirt with a hawaian print next to it is the user interface" /></div>
                     </div>
                 </div>
             </div>
@@ -390,8 +390,8 @@ The design will be instantly minted to the blockchain and saved there, enabling
                             - In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox. where you can use digital products to dress your avatar.
                         </p>                    
                     </div>
-                    <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class=" img-fluid" src="assets/usecases.png" alt="a t-shirt with a hawaian print" /></div>
+                    <div class="col-sm-10 col-md-6">
+                        <div class="px-sm-0 imgsteps"><img class=" img-fluid" src="assets/usecases.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
             </div>
@@ -423,7 +423,7 @@ The design will be instantly minted to the blockchain and saved there, enabling
                                         <div id="mc_embed_signup">
                                           <form action="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                             <div id="mc_embed_signup_scroll">
-                                              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
+                                              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your Email Address" required>
                                                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_515fdf03c460cd13fff01535c_233939e4f6" tabindex="-1" value=""></div>
                                                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
