--- a/index.html
+++ b/index.html
@@ -396,6 +396,14 @@
                 </div>
             </div>
         </section>
+        <section class="bg-light">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="protoio-embed-prototype" data-code="11LYCG" data-show-sidebuttons="0" style="width: 500; height: 500;"></div>
+                    <script async src="https://static.proto.io/api/widget-embed.js"></script>                    
+                </div>
+            </div>
+        </section>
         <!-- Call to action section-->
         <!-- <section class="cta">
             <div class="cta-content">
