--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             </div>
             <div class="container px-5">
                 <div class="text-white-50 small">
-                    <div class="mb-2"> By <a href="mailto:shirak.kevorkian@xariia.com">Shirak Kevorkian</a></div>
+                    <div class="mb-2 mailtomargin"> By <a href="mailto:shirak.kevorkian@xariia.com">Shirak Kevorkian</a></div>
                 </div>
             </div>
         </footer>
