modifications to css !

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             </div>
         </section> -->
         <!-- App badge section-->
-        <section class="bg-gradient-primary-to-secondary" id="download">
+        <section class="bg-gradient-primary-to-secondary footersection" id="download">
             <div class="container px-5">
                 <div class="row gx-5">
                     <div class="col-lg-6">
