--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             Our platform will provide you with a wide variety of digital and phygital cloths (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
                      </div>
-                    <div class="col-sm-8 col-md-6">
+                    <div class="col-xs-10 col-md-6 col-lg-4">
                         <div class="px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
                     </div>
                 </div>
@@ -357,7 +357,7 @@
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
                             Following your selection of a product, the platform will direct you to a page where you can customize your design by selecting preferences from the user interface. Our AI will create a design for you based on your preferences.                        </p>
                     </div>
-                    <div class="col-sm-10 col-md-6">
+                    <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0 imgsteps"><img class="img-fluid" src="assets/UInoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
                     </div>
                 </div>
@@ -373,7 +373,7 @@
                             The design will be instantly minted to the blockchain and saved there, enabling you to use your distinctive design on numerous products in the future.
                         </p>                    
                     </div>
-                    <div class="col-sm-10 col-md-6">
+                    <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0 imgsteps"><img class=" img-fluid" src="assets/UIprint.png" alt="a  picture of a shirt with a hawaian print next to it is the user interface" /></div>
                     </div>
                 </div>
@@ -391,7 +391,7 @@
                             - In the Metaverse, virtual worlds such as Horizon Worlds by Meta, Decentraland, and The Sandbox. where you can use digital products to dress your avatar.
                         </p>                    
                     </div>
-                    <div class="col-sm-10 col-md-6">
+                    <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0 imgsteps"><img class=" img-fluid" src="assets/usecases.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
