--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <!-- App features section-->
         <section id="features">
             <div class="container px-5">
-                <h2 class="display-4 lh-1 mb-4">Futures & Technology
+                <h2 class="display-4 lh-1 mb-4">Futures & Benefits
                 </h2>
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
@@ -393,6 +393,23 @@
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
                         <div class="px-sm-0 imgsteps"><img class=" img-fluid" src="assets/usecases.png" alt="a t-shirt with a hawaian print" /></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-light">
+            <div class="container px-5">
+
+                <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
+                    <div class="col-12 col-lg-6">
+                        <h2 class="display-4 lh-1 mb-4">Try Out Our Demo</h2>
+                        <p class="lead fw-normal text-muted mb-5 mb-lg-0">
+                           
+                        </p>                    
+                    </div>
+                    <div class="col-sm-10 col-md-8 col-lg-6">
+                        <div class="protoio-embed-prototype" data-code="UCB37B" data-show-sidebuttons="0" style="width: 100%; height: 600px;"></div>
+                        <script async src="https://static.proto.io/api/widget-embed.js"></script>                    
                     </div>
                 </div>
             </div>
