--- a/index.html
+++ b/index.html
@@ -397,9 +397,8 @@
                 </div>
             </div>
         </section>
-        <section class="bg-light">
+        <!-- <section class="bg-light">
             <div class="container px-5">
-
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4">Try Out Our Demo</h2>
@@ -413,7 +412,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
