--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
-                        <h2 class="display-4 lh-1 mb-4">Try Out Our Demo</h2>
+                        <h2 class="display-4 lh-1 mb-4">Demo</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                           
+                           Try Out Our Demo
                         </p>                    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
-                        <div class="protoio-embed-prototype" data-code="UCB37B" data-show-sidebuttons="0" style="width: 100%; height: 600px;"></div>
-                        <script async src="https://static.proto.io/api/widget-embed.js"></script>                    
+                        <div class="protoio-embed-prototype" data-code="DLXZ7D" data-show-sidebuttons="0" style="width: 100%; height: 600px;"></div>
+                        <script async src="https://static.proto.io/api/widget-embed.js"></script>          
                     </div>
                 </div>
             </div>
