--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/cloths.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Product Selector</h3>
-                                        <p class="text-muted mb-0">We offer a diverse range of Digital & Phygital NFT fashion products for the generated pattern designs to be applied to.
+                                        <p class="text-muted mb-0">We offer a diverse selection of Digital & Phygital NFT fashion products you can choose from, for the custom print design to be applied to.
                                         </p>
                                     </div>
                                 </div>
@@ -290,16 +290,15 @@
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">Creative AI </h3>
                                         <p class="text-muted mb-0">
-                                            Based on your design preferences, the AI instantly generates a unique and distinct pattern design for you.                                        </p>
+                                            A generative AI that creates unique and distinctive designs for your chosen product in real-time based on your preferences.                                    </div>
                                     </div>
-                                </div>
                                 <div class="col-md-6">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/mockup-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt">3D Mockup Generator</h3>
                                         <p class="text-muted mb-0">
-                                            A 3D product mockup generator that displays the generated pattern print design on the your chosen product in real-time.
+                                            A 3D product mockup generator that enables you to see the generated pattern design applied to the product of your choice in real-time.
                                         </p>
                                     </div>
                                 </div>
@@ -341,7 +340,7 @@
                     <div class="col-12 col-lg-6">
                         <h2 class="display-4 lh-1 mb-4"> 1. You Select A Product</h2>
                         <p class="lead fw-normal text-muted mb-5 mb-lg-0">
-                            Our platform will provide you with a wide variety of digital and phygital cloths (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
+                            Our platform will provide you with a wide variety of digital and phygital clothes (clothes that are both digital and physical, connected by a digital ID and worn in both the physical and virtual worlds) for your custom design to go on.                        </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-4">
                         <div class="px-sm-0 imgsteps1"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
@@ -397,7 +396,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="bg-light">
+        <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
@@ -411,7 +410,7 @@
                         <script async src="https://static.proto.io/api/widget-embed.js"></script>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
@@ -465,7 +464,7 @@
                             <h4 class="font-alt">Follow Us</h4>
                             <ul class="list-inline mb-0">
                                 <li class="list-inline-item me-4">
-                                    <a href="#!"><i class="bi-instagram fs-3"></i></a>
+                                    <a href="https://www.instagram.com/XARIIA.Fashion/" target="_blank"><i class="bi-instagram fs-3"></i></a>
                                 </li>
                                 <li class="list-inline-item me-4">
                                     <a href="https://www.facebook.com/XARIIA" target="_blank"><i class="bi-facebook fs-3"></i></a>
