--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-light">
+        <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
@@ -410,7 +410,7 @@
                         <script async src="https://static.proto.io/api/widget-embed.js"></script>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
